[gd_scene load_steps=8 format=3 uid="uid://dpd7klekgb8my"]

[ext_resource type="Script" path="res://Main.gd" id="1_r487a"]
[ext_resource type="PackedScene" uid="uid://csuw5ofbpt7lk" path="res://board.tscn" id="2_olovn"]
[ext_resource type="PackedScene" uid="uid://c7roobj8bhhtg" path="res://circle.tscn" id="2_vb0x1"]
[ext_resource type="PackedScene" uid="uid://b4r6f22xdjnrl" path="res://cross.tscn" id="3_er5up"]
[ext_resource type="PackedScene" uid="uid://v4uqnrm7o451" path="res://game_over_menu.tscn" id="5_o75m5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlvci"]
bg_color = Color(5.19812e-06, 0.603039, 0.724258, 1)
border_width_left = 6
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85tcm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.817521, 0.817521, 0.817521, 1)
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11
shadow_size = 6
shadow_offset = Vector2(3, 3)

[node name="Main" type="Node2D"]
script = ExtResource("1_r487a")
circle_scene = ExtResource("2_vb0x1")
cross_scene = ExtResource("3_er5up")

[node name="Board" parent="." instance=ExtResource("2_olovn")]

[node name="SidePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 600)
offset_left = 600.0
offset_right = 900.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rlvci")

[node name="PlayerLabel" type="Label" parent="."]
offset_left = 600.0
offset_top = 100.0
offset_right = 900.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 30
text = "Next player : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
offset_left = 650.0
offset_top = 200.0
offset_right = 850.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_85tcm")

[node name="GameOverMenu" parent="." instance=ExtResource("5_o75m5")]
process_mode = 2

[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
